# StrangePulseToolkit

./: .gitattributes  .gitignore  .gitmodules  CMakeLists.txt  License.md  ReadMe.md  package-info.json  package-info.json.in
docs/: spt.attractor.aizawa.maxref.xml  spt.attractor.clorenz.maxref.xml  spt.attractor.dadras.maxref.xml  spt.attractor.halvorsen.maxref.xml  spt.attractor.lorenz.maxref.xml  spt.attractor.rabinovich.maxref.xml  spt.attractor.thomas.maxref.xml  spt.attractor.tsucs1.maxref.xml  spt.rpde.maxref.xml  spt.rqa.maxref.xml  style-guide.md
docs/design/: MODULES.md  README.md  tokens.md
extras/: spt-Overview.maxpat
help/: spt.attractor.aizawa.maxhelp  spt.attractor.clorenz.maxhelp  spt.attractor.dadras.maxhelp  spt.attractor.halvorsen.maxhelp  spt.attractor.lorenz.maxhelp  spt.attractor.thomas.maxhelp  spt.attractor.tsucs1.maxhelp  spt.rpde.maxhelp  spt.rqa.maxhelp  strangeAudio.json  thomasAudio.json
patchers/: 04RM.json  AttenuateAndScale.js  AttenuateAndScale.maxpat  AttractorDisplay.maxpat  AttractorDisplaySmall.maxpat  Attractors.maxpat  AudioEventDrain.js  AudioEventTrigger.maxpat  AudioFeedback.maxpat  AudioReactive.js  AudioReactive.maxpat  AudioReactiveFit.js  AudioTriggers.maxpat  BandFollower~.maxpat  CombineSignals.maxpat  DisplayUtilities.maxpat  EventEnvelope.maxpat  Feedback.maxpat  GateLogic.maxpat  GradientTrigger.js  GradientTrigger.maxpat  ModTrigger.maxpat  ModTriggerSub.maxpat  MotionLogic.js  MotionLogic.maxpat  MultiModTrigger.js  MultiModTrigger.maxpat  RecurrenceLab.js  RecurrenceLab.maxpat  RecurrencePlot.maxpat  RhythmMakers.maxpat  RhythmModifiers.json  RhythmModifiers.maxpat  SamplePlayPoly.js  SamplePlayPoly.maxpat  SignalGenerators.maxpat  SignalMorph.js  SignalMorph.maxpat  SignalShapers.maxpat  SingleBandpass~.maxpat  (+65 more)
source/projects/spt.attractor/: CMakeLists.txt  PLAN_bad_state_improvements.md
source/projects/spt.attractor.aizawa/: spt.attractor.aizawa.cpp
source/projects/spt.attractor.clorenz/: CMakeLists.txt  spt.attractor.clorenz.cpp
source/projects/spt.attractor.dadras/: spt.attractor.dadras.cpp
source/projects/spt.attractor.halvorsen/: spt.attractor.halvorsen.cpp
source/projects/spt.attractor.lorenz/: CMakeLists.txt  spt.attractor.lorenz.cpp
source/projects/spt.attractor.thomas/: CMakeLists.txt  spt.attractor.thomas.cpp
source/projects/spt.attractor.tsucs1/: spt.attractor.tsucs1.cpp
source/projects/spt.attractor/include/: attractor_base.h
source/projects/spt.attractor/test/: attractor_test.cpp  bad_state_test.cpp  cpu_stability_test.cpp  dadras_test.cpp  deferred_log_test.cpp  position_cache_test.cpp  secondary_sync_test.cpp  speed_test.cpp
source/projects/spt.rpde/: CMakeLists.txt  deferred_diag_test.cpp  histogram_scan_test.cpp  ring_buffer_test.cpp  spt.rpde.cpp  test_rpde.cpp
source/projects/spt.rqa/: CMakeLists.txt  hop_size_test.cpp  line_stats_test.cpp  spt.rqa.cpp
styles/: spt.maxstyle
tests/: CMakeLists.txt
tests/patchers/: README.md  rpde_test_harness.maxpat
